# vectra-qa

./: .coverage  .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  QUICK_REFERENCE.md  README.md  TEST_REPORT.md  USER_GUIDE.md  docker-compose.yml  logo  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  test_imports.py  verify-docker.sh
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  release.yml  sync-wiki.yml
.omo/: boulder.json
.omo/drafts/: live-engineer-alive.md
.omo/evidence/: T1-events-construct.txt  T1-events-discriminator.txt  T1-events-no-extra.txt  T10-clear.txt  T10-inject.txt  T10-scrub-log.txt  T11-cache.txt  T11-scrub.txt  T11-test-started.txt  T13-greeting.txt  T13-inject.txt  T13-resume.txt  T14-no-echo.txt  T14-sse.txt  T14-start.txt  T15-chat-404.txt  T15-existing-endpoints.txt  T15-no-imports.txt  T16-playwright-test.js  T16-playwright-test.py  T17-no-leak.txt  T17_debug.py  T17_debug2.py  T17_debug3.py  T17_debug4.py  T17_debug5.py  T17_debug6.py  T17_qa_test.py  T18-coverage.txt  T18-pass.txt  T19-pass.txt  T2-catalog-nonempty.txt  T2-cred-required.txt  T2-landing-no-auth.txt  T20-secure.txt  T20-state.txt  T20-vocab.txt  T21-classifier.txt  T21-events.txt  T22-e2e.txt  (+40 more)
.omo/plans/: live-qa-engineer.md
.omo/run-continuation/: ses_172919676ffeBKz6A6PYat3DfW.json
0.1.0/: 404.html  CNAME  index.html  objects.inv  sitemap.xml
0.1.0/search/: search_index.json
agents/data_validator/: agents.md  soul.md  worker.py
agents/feature_tester/: worker.py
agents/orchestrator/: agents.md  orchestrator.py  soul.md
agents/ui_explorer/: agents.md  report_builder.py  soul.md  worker.py  worker_llm.py
command_center/: __init__.py  chatbot.py  live_engineer.py  main.py  obsidian_reader.py
command_center/engineer/: __init__.py  agents.py  classifier.py  conversation.py  credentials.py  events.py  metrics.py  narrator.py  report.py  session.py  site_catalog.py  state_machine.py  vocabulary.py
command_center/static/: index.html  result.html
docker/: Dockerfile.dashboard  Dockerfile.mcp
docs/: index.md
docs/api/: agents.md  chatbot.md  endpoints.md  live-engineer.md
docs/architecture/: agent-communication.md  components.md  memory-layer.md  overview.md
docs/assets/: custom.css
docs/development/: contributing.md  custom-agents.md  local-setup.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: environment-variables.md  quick-reference.md  troubleshooting.md
docs/setup/: postgresql.md
docs/user-guide/: advanced-usage.md  deterministic-mode.md  feature-testing.md  understanding-results.md  writing-tests.md
examples/: test_artflarex.py  test_real_app.py  test_scenario.py
helm/vectra-qa/: Chart.yaml  values.yaml
mcp_server/: audit.py  auth.py  browser_tools.py  cost_tracker.py  db.py  deterministic.py  ecommerce.py  embeddings.py  json_extractor.py  llm_router.py  metrics.py  models.py  rag.py  resource_manager.py  server.py  state_manager.py  storage.py  task_queue.py  tools.py  vault_client.py
mcp_server/features/: accessibility.py  api_contract.py  auth_testing.py  multi_browser.py  performance.py  visual_regression.py
migrations/: 001_init.sql
migrations/rollback/: 001_rollback.sql
obsidian_vault/Global/: Chat_Log.md  Data_Validation_Log.md  Test_Run_Master.md  UI_State_Log.md
obsidian_vault/Runs/: Artflarex_Accessibility_Test.md  Artflarex_Backend_API_Test.md  Artflarex_Contact_API_Test.md  Artflarex_Contact_UI_Test.md  Artflarex_Homepage_Test.md  Artflarex_Navigation_Test.md  Artflarex_Performance_SEO_Test.md  Artflarex_Responsive_Test.md  Artflarex_Services_Test.md
obsidian_vault/Templates/: Agent_Spawn_Template.md
scripts/: run_migrations.py  validate_env.py
tests/: conftest.py  conftest_db.py
tests/integration/: server.py  test_e2e.py
tests/playbooks/: homepage_smoke.yaml
tests/unit/: test_agent_spawner.py  test_agents.py  test_browser_tools.py  test_browser_tools_extended.py  test_browser_tools_mcp.py  test_command_center.py  test_db.py  (+29 more)
wiki/: Architecture-Overview.md  FAQ.md  Home.md  Installation-Guide.md  Troubleshooting.md  Understanding-Results.md  Writing-Tests.md
(+44 files in other folders)
